--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     "no-unused-vars": "off",
     "eol-last": "off",
     "import/newline-after-import": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-plusplus": "off",
+    "no-param-reassign": "off"
   }
 }
